# AgentSmith-HIDS

./: .gitignore  Quick-Start.md  README-zh_CN.md  README.md  README_EN.md
BenchmarkData/: connect_entry_handler  execve_entry_handler  fsnotify_post_handler  recvfrom_entry_handler  recvfrom_handler
agent/: Cargo.toml  README.md  TODO.md  build.rs
agent/src/: c_until.c  c_until.c.musl  main.rs  mod.rs
agent/src/conf/: filter.rs  mod.rs  settings.rs  whitelist.rs
agent/src/lib/: detection_module.rs  heartbeat.rs  kafka_output.rs  logwatcher.rs  mod.rs
agent_golang/: README.md  c_until.c  go.mod  go.sum  main.go
agent_golang/common/: cache.go  configor.go  kafkaHelper.go  logger.go  until.go
agent_golang/doc/: TODO.md
agent_golang/src/: c_until.c  c_until.h  go.mod  go.sum  (+1 more)
agent_rust/: README.md
benchemark_data/: cpu_netlink  cpu_shm  hook_connect_time_netlink  hook_connect_time_shm  mem_netlink  mem_shm  no_hook_connect_time_netlink  no_hook_connect_time_shm
benchmark_data/: connect_entry_handler.txt  connect_handler  connect_handler.txt  execve_entry_handler.txt  execve_handler.txt  security_inode_create_entry_handler.txt  security_inode_create_handler.txt
doc/: AgentSmith-HIDS Hook Design BencheMark(Memory Share).md  AgentSmith-HIDS Hook Design BencheMark(Netlink).md  AgentSmith-HIDS ToDo List.md  AgentSmith-HIDS-Quick-Start-zh_CN.md  AgentSmith-HIDS-Quick-Start.md
script/: install.sh  linux-exploit-suggester.sh  smith.service  uninstall.sh
smith_console/: README.md  heartbeat_server.py  requirements  setting.py  setup.py  smith  smith.py
(+58 files in other folders)
