[package]
name = "agent"
version = "0.2.6"
authors = ["E_Bwill <cy_sniper@yeah.net>"]

[dependencies]
kafka = "0.8"
libc = "0.2.43"
daemonize = "0.3.0"
pipers = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
rust-crypto = "^0.2"
lru_time_cache = "0.9.0"
iprange = "0.6.2"
ipnet = "^2.0.0"

[build-dependencies]
cc = "1.0"